tests/golden/type_errors/array_reduce_callback_return.cd
fun bad(acc: number, value: number): string {
  return "bad";
}
reduce([1], 0, bad);
