tests/golden/type_errors/array_reduce_callback_return.err
Type error at 4:19: reduce expects callback to return number, got string
  reduce([1], 0, bad);
                    ^
